# Bookshelf

./: .editorconfig  .env.yml  .gitattributes  .gitignore  .readthedocs.yml  .spyglassrc.json  README.md  build.py  pyproject.toml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  other.yml  task.yml
.github/workflows/: metadata.yml  prerelease.yml  publish.yml  release-check.yml  release-nightly.yml  release-pr.yml  release.yml  review.yml
bookshelf/: __init__.py  __main__.py  bundle.py  definitions.py  helpers.py  logger.py  module.py
bookshelf/cli/: __init__.py  docs.py  examples.py  meta.py  modules.py
bookshelf/commands/: docs.py  examples.py  modules.py
bookshelf/meta/: __init__.py
bookshelf/metadata/: __init__.py  feature.py  module.py
bookshelf/packtest/: __init__.py  assets.py  runner.py
bookshelf/plugins/: __init__.py  auto_log_format.py  bundle_packs.py  dependencies.py  gen_help.py  gen_load.py  load_tests.py  log_build.py  release_pack.py  set_pack_meta.py  setup_templates.py
bookshelf/templates/: header.jinja  help.jinja
bookshelf/templates/load/: errors.jinja  exclusive.jinja  validate.jinja
core/: definitions.py
core/cli/: docs.py  meta.py  modules.py
core/common/: helpers.py  logger.py  metadata.py  packtest.py
core/plugins/: bundle_packs.py  gen_help.py  gen_load.py  log_build.py  release_pack.py  setup_pack.py  setup_tags.py  setup_tests.py
core/templates/: help.jinja
core/templates/load/: errors.jinja  validate.jinja
data/: manifest.json  versions.json
docs/: CHANGELOG.md  conf.py  faq.md  index.md  mentions-legales.md  modules.md  quickstart.md  related.md  special-thanks.md
docs/_static/: bookshelf.css  bookshelf.js  switcher.json
docs/_templates/: changelog.md  comments.md  definitions.md  featured-modules.md  footer-links.html  mention-legales-footer.html  mentions-legales.html
docs/_templates/changelog/: template.md  v1.0.0.md  v2.0.0.md  v2.1.0.md  v2.1.1.md  v2.2.0.md  v2.2.1.md  v2.2.2.md  v3.0.0.md
docs/changelog/: index.md  unreleased.md  v2.1.0.md  v2.1.1.md  v2.2.1.md  v2.2.2.md  v3.0.0.md  v3.0.1.md  v3.0.2.md  v3.1.0.md  v3.1.1.md  v3.2.0.md  v3.2.1.md  v3.2.2.md  v4.0.0.md
docs/contribute/: cli-reference.md  commit-guidelines.md  contribution-validation.md  conventions.md  debug-tools.md  definitions.md  documentation.md  file-format.md  generated-files.md  getting-started.md  good-practices.md  index.md  metadata.md  nomenclature.md  shared-resources.md  special-functions.md  special-thanks.md  tree-structure.md
docs/examples/: index.md  lifestring.md  paintbrush.md
docs/modules/: bitwise.md  block.md  collection.md  color.md  component.md  dump.md  environment.md  fsm.md  generate.md  generation.md  health.md  hitbox.md  id.md  index.md  interaction.md  link.md  log.md  math.md  move.md  position.md  random.md  raycast.md  schedule.md  sidebar.md  spline.md  string.md  time.md  tree.md  vector.md  view.md  xp.md
docs/related/: guides-and-tools.md  index.md  related-libraries.md  use-bookshelf.md
examples/: lifestring.md  paintbrush.md
meta/: manifest.json  versions.json
modules/: config.json
modules/@dev/: README.md  module.json
modules/@prefabs/: README.md  module.json
modules/@runtime/: README.md  module.json
modules/@suite/: README.md  module.json
modules/bookshelf/: README.md  module.json
modules/bs.bitwise/: README.md  module.json
modules/bs.block/: README.md  gen_blast_resistance.py  gen_block.py  gen_blocks.py  module.json
modules/bs.block/templates/: groups_table.jinja  items_table.jinja  types_table.jinja
modules/bs.collection/: README.md  module.json
modules/bs.color/: README.md  module.json
modules/bs.component/: README.md  module.json
modules/bs.dump/: README.md  module.json
modules/bs.environment/: README.md  gen_biomes.py  gen_environment.py  module.json
modules/bs.fsm/: module.json
modules/bs.generate/: README.md  module.json
modules/bs.generation/: README.md  module.json
modules/bs.health/: README.md  module.json
modules/bs.hitbox/: README.md  gen_hitbox.py  gen_shapes.py  module.json
modules/bs.id/: README.md  module.json
modules/bs.interaction/: README.md  module.json
modules/bs.link/: README.md  module.json
modules/bs.log/: README.md  module.json
modules/bs.math/: README.md  module.json
modules/bs.move/: README.md  module.json
modules/bs.position/: README.md  module.json
modules/bs.random/: README.md  module.json
modules/bs.raycast/: README.md  module.json
modules/bs.regex/data/: module.json
modules/bs.schedule/: README.md  module.json
modules/bs.sidebar/: README.md  module.json
modules/bs.spline/: README.md  gen_tables.py  module.json
modules/bs.spline/templates/: lookup_table.jinja
modules/bs.string/: README.md  gen_files.py  gen_string.py  module.json
modules/bs.string/templates/: join.jinja  (+2 more)
modules/bs.time/: README.md  module.json
modules/bs.tree/: README.md  module.json
modules/bs.vector/: README.md  module.json
modules/bs.view/: README.md  module.json
modules/bs.xp/: README.md  module.json
scripts/: all.ipynb
src/bookshelf/: __init__.py  bundle.py  definitions.py  module.py
(+2166 files in other folders)
