[build-system]
requires = ["pdm-backend", "pdm-build-locked"]
build-backend = "pdm.backend"

[project]
name = "mcbookshelf"
dynamic = ["version"]
description = "Scripts for Bookshelf and the Github pipeline."
authors = [{ name = "Bookshelf Contributors", email = "contact@gunivers.net" }]
dependencies = [
  "beet>=0.110.0",
  "click>=8.1.8",
  "colorama>=0.4.6",
  "pydantic>=2.11.3",
  "requests>=2.32.3",
  "lectern>=0.34.0",
  "watchfiles>=1.1.0",
]
requires-python = ">=3.12"
license = { text = "MPL-2.0" }

[dependency-groups]
dev = [
  "mypy>=1.15.0",
  "ruff>=0.11.6",
  "types-colorama>=0.4.15.20240311",
  "types-docutils>=0.21.0.20241128",
  "types-requests>=2.32.0.20250328",
]
docs = [
  "linkify-it-py>=2.0.3",
  "myst-parser>=4.0.1",
  "pydata-sphinx-theme>=0.16.0",
  "sphinx-autobuild>=2024.10.3",
  "sphinx-copybutton>=0.5.2",
  "sphinx-design>=0.6.1",
  "sphinx-minecraft>=1.0.2",
  "sphinx-togglebutton>=0.3.2",
  "sphinx>=8.2.3",
]

[project.scripts]
build = "bookshelf.commands.modules:build"
docs = "bookshelf.commands.docs:docs"
examples = "bookshelf.commands.examples:examples"
modules = "bookshelf.commands.modules:modules"
watch = "bookshelf.commands.modules:watch"

[tool.pdm]
distribution = true
build.custom-hook = "build.py"
build.source-includes = ["modules"]
version.getter = "bookshelf:version"
version.source = "call"

[tool.mypy]
files = ["bookshelf", "modules"]
explicit_package_bases = true
namespace_packages = true

[tool.ruff]
namespace-packages = ["bookshelf"]
lint.select = ["ALL"]
lint.ignore = ["D100", "D203", "D213", "INP001", "S603", "UP017"]
